# Yeyodra

./: .gitignore  ADD_CUSTOM_GAME_FEATURE.md  ADMIN_API_USAGE.md  API_503_ERROR_HANDLING.md  API_FIX_COMPLETE.md  API_IMPLEMENTATION.md  ARIA2C_IMPLEMENTATION.md  ARIA2C_PATH_DETECTION_FIX.md  ARIA2C_PATH_FIX.md  ARIA2C_STATUS.md  AUTH_IMPLEMENTATION_COMPLETE.md  AUTOSTART_CLEANUP_REPORT.md  AUTO_REFRESH_FEATURE.md  BEHAVIOR_TAB_AUTOSTART_ANALYSIS.md  BINARY_PROCESS_CHECKLIST.md  CACHING_IMPLEMENTATION_COMPLETE.md  CATALOGUE_FILTER_BUILD_FIX.md  CLEAR_EXECUTABLE_FEATURE.md  COMPLETE_FIX_REPORT.md  COMPLETE_FIX_SUMMARY.md  CRACKING_FINAL_FIX.md  CRACKING_FUNDAMENTAL_FIX_COMPLETE.md  CRACKING_ROOT_CAUSE_FINAL.md  CSP_FIX_CATALOGUE_FILTERS.md  CUSTOM_GAME_DETAILS_FIX.md  CUSTOM_GAME_FIXES.md  DEPLOYMENT_GUIDE.md  DLC_IMPLEMENTATION_COMPLETE.md  DOWNLOAD_BUTTON_UI_UPDATE.md  DOWNLOAD_HISTORY_DEBUG.md  EDIT_PROFILE_IMPLEMENTATION.md  ENABLE_DEVTOOLS_PRODUCTION.md  FIX_SUMMARY.md  FRONTEND_INTEGRATION_COMPLETE.md  GAME_CRACKING_IMPLEMENTATION_PLAN.md  GAME_LAUNCHER_IMPLEMENTATION.md  GAME_UPDATE_FEATURE.md  GRACEFUL_DEGRADATION_IMPLEMENTATION.md  HYDRA_GRACEFUL_DEGRADATION_PATTERN.md  HYDRA_RESTORE_IMPLEMENTATION_ANALYSIS.md  (+51 more)
binaries/: README.md
ludusavi/: README.md  test_output.json
src/: App.scss  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: achievements.rs  api.rs  aria2.rs  auth.rs  cache.rs  cloud_sync.rs  dlc_cache.rs  download_history.rs  game_launcher.rs  lib.rs  library.rs  library_scanner.rs  lock.rs  ludasavi.rs  main.rs  preferences.rs  setup.rs  steam_dll.rs  steam_restart.rs  steamtools.rs  user_profile.rs
src-tauri/src/cracker/: command.rs  config.rs  error.rs  mod.rs  setup.rs
src-tauri/src/cracker/goldberg/: achievements.rs  apply.rs  depots.rs  dlcs.rs  interfaces.rs  languages.rs  mod.rs
src-tauri/src/cracker/steamless/: apply.rs  config.rs  files.rs  mod.rs  scanner.rs  utils.rs
src/components/: Button.scss  Button.tsx  index.ts
src/components/AchievementsList/: AchievementsList.scss  AchievementsList.tsx
src/components/AddCustomGameModal/: AddCustomGameModal.scss  AddCustomGameModal.tsx
src/components/Avatar/: Avatar.scss  Avatar.tsx
src/components/Badge/: Badge.scss  Badge.tsx
src/components/CheckboxField/: CheckboxField.scss  CheckboxField.tsx
src/components/CloudSyncModal/: CloudSyncFilesModal.scss  CloudSyncFilesModal.tsx  CloudSyncModal.scss  CloudSyncModal.tsx  index.ts
src/components/CrackingModal/: CrackingModal.scss  CrackingModal.tsx
src/components/DescriptionHeader/: DescriptionHeader.scss  DescriptionHeader.tsx
src/components/DlcManager/: DlcManager.scss  DlcManager.tsx
src/contexts/: cloud-sync.tsx  game-details.tsx  network-mode.tsx
src/features/: appSlice.ts  catalogueSlice.ts  librarySlice.ts  toastSlice.ts  userSlice.ts
src/hooks/: index.ts  useCatalogue.ts  useDownload.ts  useLibrary.ts  useToast.ts
src/locales/: index.ts
src/pages/: Catalogue.scss  Catalogue.tsx  Downloads.scss  Downloads.tsx  GameDetails.scss  GameDetails.tsx  Home.scss  Home.tsx  Settings.tsx
src/scss/: globals.scss
src/store/: index.ts
src/types/: index.ts
src/utils/: classnames.ts  navigation.ts
(+86 files in other folders)
