[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
scraper = "0.20"
chrono = "0.4"
futures = "0.3"
shellexpand = "3.1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
regex = "1"
zip = "0.6"
walkdir = "2"
tempfile = "3"
anyhow = "1"
lazy_static = "1.4"
dirs = "5.0"
serde_yaml = "0.9"
tar = "0.4"
flate2 = "1.0"
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

