[package]
name = "yeyodra"
version = "0.1.0"
description = "Yeyodra - Modern Game Launcher"
authors = ["Nazril"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yeyodra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls", "stream"] }
tokio = { version = "1.47.1", features = ["full", "sync"] }
rand = "0.8"
scraper = "0.20"
chrono = "0.4"
futures = "0.3.31"
futures-util = "0.3.31"
shellexpand = "3.1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.21.3"
regex = "1.11.2"
zip = "5.1.1"  # Updated to match BetterSteamAutoCracker
walkdir = "2.5.0"
tempfile = "3"
anyhow = "1"
lazy_static = "1.4"
dirs = "6.0.0"  # Updated to match BetterSteamAutoCracker
serde_yaml = "0.9"
tar = "0.4"
flate2 = "1.0"
hostname = "0.4"
machineid-rs = "1.2"  # For hardware ID generation
log = "0.4.28"  # For logging in cracker modules
env_logger = "0.11.8"  # For logging initialization
base64 = "0.22.1"  # For Goldberg
scopeguard = "1.2.0"  # For cleanup operations

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = { version = "0.3.9", features = ["winuser", "winreg", "handleapi", "synchapi", "winbase", "winnt", "shellapi"] }
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

